주문페이지 구성, 주문 API, 카트 API 적용

--- a/MarketCurlyB/MarketCurlyB/Base.lproj/Main.storyboard
+++ b/MarketCurlyB/MarketCurlyB/Base.lproj/Main.storyboard
@@ -1270,7 +1270,66 @@
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="주문하기"/>
+                                <connections>
+                                    <action selector="goToOrder:" destination="nQf-SW-9Cf" eventType="touchUpInside" id="ftt-ob-7Tv"/>
+                                </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1HB-gp-V6a">
+                                <rect key="frame" x="0.0" y="88" width="414" height="120"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="—Pngtree—location navigation_4419404" translatesAutoresizingMaskIntoConstraints="NO" id="dTo-cF-4sP">
+                                        <rect key="frame" x="20" y="20" width="20.5" height="20.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="dTo-cF-4sP" secondAttribute="height" multiplier="1:1" id="LZX-rB-oOe"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="주소" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iDZ-Sj-rLr">
+                                        <rect key="frame" x="47.5" y="22.5" width="336.5" height="16"/>
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="13"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" tag="106" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7uY-6B-Wub">
+                                        <rect key="frame" x="18.5" y="70.5" width="24" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="24" id="NNK-aY-DGJ"/>
+                                            <constraint firstAttribute="width" secondItem="7uY-6B-Wub" secondAttribute="height" multiplier="1:1" id="c3Y-OA-v9w"/>
+                                        </constraints>
+                                        <color key="tintColor" systemColor="systemGray5Color"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain">
+                                            <imageReference key="image" image="checkmark" catalog="system" symbolScale="small"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="selectAllBtn:" destination="nQf-SW-9Cf" eventType="touchUpInside" id="h4f-xn-fGA"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="전체선택" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5GX-gM-7Tg">
+                                        <rect key="frame" x="50.5" y="73.5" width="52" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="7uY-6B-Wub" firstAttribute="top" secondItem="dTo-cF-4sP" secondAttribute="bottom" constant="30" id="6kR-gP-rFw"/>
+                                    <constraint firstItem="iDZ-Sj-rLr" firstAttribute="centerY" secondItem="dTo-cF-4sP" secondAttribute="centerY" id="6zU-tg-ZK1"/>
+                                    <constraint firstItem="7uY-6B-Wub" firstAttribute="centerX" secondItem="dTo-cF-4sP" secondAttribute="centerX" id="8pv-q4-Qmi"/>
+                                    <constraint firstAttribute="trailing" secondItem="iDZ-Sj-rLr" secondAttribute="trailing" constant="30" id="B8C-Pu-nG2"/>
+                                    <constraint firstItem="iDZ-Sj-rLr" firstAttribute="leading" secondItem="dTo-cF-4sP" secondAttribute="trailing" constant="7" id="BKb-bd-xgk"/>
+                                    <constraint firstItem="5GX-gM-7Tg" firstAttribute="leading" secondItem="7uY-6B-Wub" secondAttribute="trailing" constant="8" id="DFY-X6-EXx"/>
+                                    <constraint firstItem="dTo-cF-4sP" firstAttribute="leading" secondItem="1HB-gp-V6a" secondAttribute="leading" constant="20" id="DHk-MW-meA"/>
+                                    <constraint firstItem="dTo-cF-4sP" firstAttribute="width" secondItem="1HB-gp-V6a" secondAttribute="width" multiplier="0.05" id="X5e-gS-o1P"/>
+                                    <constraint firstItem="5GX-gM-7Tg" firstAttribute="centerY" secondItem="7uY-6B-Wub" secondAttribute="centerY" id="Yon-WW-44l"/>
+                                    <constraint firstAttribute="height" constant="120" id="oKf-Pe-D1b"/>
+                                    <constraint firstItem="dTo-cF-4sP" firstAttribute="top" secondItem="1HB-gp-V6a" secondAttribute="top" constant="20" id="zsI-ro-ccF"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" estimatedSectionHeaderHeight="-1" sectionFooterHeight="28" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Yrj-xn-Cdc">
+                                <rect key="frame" x="0.0" y="208" width="414" height="604"/>
+                                <color key="separatorColor" systemColor="systemGray4Color"/>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="MgU-if-7em"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -1279,18 +1338,70 @@
                             <constraint firstItem="p8K-gd-lca" firstAttribute="top" secondItem="MgU-if-7em" secondAttribute="top" id="DMM-2C-TqB"/>
                             <constraint firstItem="Uac-7t-qcI" firstAttribute="leading" secondItem="MgU-if-7em" secondAttribute="leading" constant="20" id="F8V-kl-qyZ"/>
                             <constraint firstItem="p8K-gd-lca" firstAttribute="trailing" secondItem="MgU-if-7em" secondAttribute="trailing" id="HIf-3T-xT3"/>
+                            <constraint firstItem="1HB-gp-V6a" firstAttribute="leading" secondItem="MgU-if-7em" secondAttribute="leading" id="Nwf-m6-UDd"/>
                             <constraint firstItem="MgU-if-7em" firstAttribute="bottom" secondItem="Uac-7t-qcI" secondAttribute="bottom" id="WeK-wx-Idi"/>
+                            <constraint firstItem="1HB-gp-V6a" firstAttribute="trailing" secondItem="MgU-if-7em" secondAttribute="trailing" id="X6L-eQ-FNy"/>
                             <constraint firstItem="p8K-gd-lca" firstAttribute="leading" secondItem="MgU-if-7em" secondAttribute="leading" id="aSk-VX-4hz"/>
+                            <constraint firstItem="MgU-if-7em" firstAttribute="trailing" secondItem="Yrj-xn-Cdc" secondAttribute="trailing" id="dlc-k7-rWx"/>
+                            <constraint firstItem="Uac-7t-qcI" firstAttribute="top" secondItem="Yrj-xn-Cdc" secondAttribute="bottom" id="e3f-lz-34q"/>
+                            <constraint firstItem="1HB-gp-V6a" firstAttribute="top" secondItem="p8K-gd-lca" secondAttribute="bottom" id="gEo-cU-5cU"/>
+                            <constraint firstItem="Yrj-xn-Cdc" firstAttribute="leading" secondItem="MgU-if-7em" secondAttribute="leading" id="n15-W2-0lO"/>
+                            <constraint firstItem="Yrj-xn-Cdc" firstAttribute="top" secondItem="1HB-gp-V6a" secondAttribute="bottom" id="zFl-26-PPW"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="addressLabel" destination="iDZ-Sj-rLr" id="hlL-9n-uTd"/>
+                        <outlet property="allButton" destination="7uY-6B-Wub" id="iFM-At-rrD"/>
                         <outlet property="naviBar" destination="p8K-gd-lca" id="atg-oc-0VP"/>
                         <outlet property="orderButton" destination="Uac-7t-qcI" id="8v6-sD-y86"/>
+                        <outlet property="tableView" destination="Yrj-xn-Cdc" id="SjU-hJ-lvl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x8J-YM-9p0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3578" y="-628"/>
+            <point key="canvasLocation" x="3576.811594202899" y="-628.125"/>
+        </scene>
+        <!--Order View Controller-->
+        <scene sceneID="nXr-8x-C4n">
+            <objects>
+                <viewController storyboardIdentifier="orderViewController" modalPresentationStyle="fullScreen" id="Cc7-1F-kqw" customClass="orderViewController" customModule="MarketCurlyB" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Vjs-kf-Xw3">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5JC-Yz-cX8">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <color key="tintColor" systemColor="labelColor"/>
+                                <items>
+                                    <navigationItem title="주문서" id="FcO-nf-NCo">
+                                        <barButtonItem key="leftBarButtonItem" image="chevron.left" catalog="system" id="OAV-PB-i6L"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" estimatedSectionHeaderHeight="-1" sectionFooterHeight="28" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="BKd-BT-QZg">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="sectionIndexBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="eKm-G4-VgV"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="5JC-Yz-cX8" firstAttribute="top" secondItem="eKm-G4-VgV" secondAttribute="top" id="53o-ra-f8D"/>
+                            <constraint firstItem="eKm-G4-VgV" firstAttribute="bottom" secondItem="BKd-BT-QZg" secondAttribute="bottom" id="C0Q-Ku-mWQ"/>
+                            <constraint firstItem="eKm-G4-VgV" firstAttribute="trailing" secondItem="BKd-BT-QZg" secondAttribute="trailing" id="KTm-or-pfd"/>
+                            <constraint firstAttribute="trailing" secondItem="5JC-Yz-cX8" secondAttribute="trailing" id="OkH-XD-x6A"/>
+                            <constraint firstItem="BKd-BT-QZg" firstAttribute="top" secondItem="5JC-Yz-cX8" secondAttribute="bottom" id="c8Z-b3-8gD"/>
+                            <constraint firstItem="BKd-BT-QZg" firstAttribute="leading" secondItem="eKm-G4-VgV" secondAttribute="leading" id="iT4-Tl-sF0"/>
+                            <constraint firstItem="5JC-Yz-cX8" firstAttribute="leading" secondItem="eKm-G4-VgV" secondAttribute="leading" id="vc2-KU-iWE"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="BKd-BT-QZg" id="pXF-Ur-tTI"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aZo-F8-rmq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4271" y="-628"/>
         </scene>
         <!--검색-->
         <scene sceneID="2Ui-80-2u9">
@@ -1761,7 +1872,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8G4-aH-jZU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4271.0144927536239" y="124.55357142857142"/>
+            <point key="canvasLocation" x="4239" y="125"/>
         </scene>
         <!--Make Id View Controller-->
         <scene sceneID="E1u-2G-qQL">
@@ -2575,6 +2686,47 @@
             </objects>
             <point key="canvasLocation" x="4953.6231884057979" y="124.55357142857142"/>
         </scene>
+        <!--Order List View Controller-->
+        <scene sceneID="y1U-Jn-QIS">
+            <objects>
+                <viewController storyboardIdentifier="orderListViewController" id="0b0-wa-tlB" customClass="orderListViewController" customModule="MarketCurlyB" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9UD-S3-fEn">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CaG-xF-9qj">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <items>
+                                    <navigationItem title="주문 내역" id="nhh-VI-t5M"/>
+                                </items>
+                            </navigationBar>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lae-Sv-CFp">
+                                <rect key="frame" x="0.0" y="88" width="414" height="50"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="G93-sQ-Apm"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="qsV-NL-Xq2"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="lae-Sv-CFp" firstAttribute="leading" secondItem="qsV-NL-Xq2" secondAttribute="leading" id="9hy-VK-OZA"/>
+                            <constraint firstItem="lae-Sv-CFp" firstAttribute="trailing" secondItem="qsV-NL-Xq2" secondAttribute="trailing" id="G1q-F8-D66"/>
+                            <constraint firstItem="lae-Sv-CFp" firstAttribute="top" secondItem="CaG-xF-9qj" secondAttribute="bottom" id="skt-W0-4UZ"/>
+                            <constraint firstItem="CaG-xF-9qj" firstAttribute="top" secondItem="qsV-NL-Xq2" secondAttribute="top" id="vdM-oI-eLB"/>
+                            <constraint firstItem="CaG-xF-9qj" firstAttribute="leading" secondItem="qsV-NL-Xq2" secondAttribute="leading" id="vxH-lT-SJS"/>
+                            <constraint firstAttribute="trailing" secondItem="CaG-xF-9qj" secondAttribute="trailing" id="y6y-hM-6rF"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tabmanView" destination="lae-Sv-CFp" id="BSS-qI-dM6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xEm-5r-GJg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5808.6956521739139" y="-187.5"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="k9u-DD-fzw">
             <objects>
@@ -2621,6 +2773,7 @@
         <image name="square.and.arrow.up" catalog="system" width="115" height="128"/>
         <image name="선물하기" width="41" height="40"/>
         <image name="신상품" width="524" height="681"/>
+        <image name="—Pngtree—location navigation_4419404" width="320" height="320"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
