--- a/MarketCurlyB/MarketCurlyB/Base.lproj/Main.storyboard
+++ b/MarketCurlyB/MarketCurlyB/Base.lproj/Main.storyboard
@@ -1374,7 +1374,11 @@
                                 <color key="tintColor" systemColor="labelColor"/>
                                 <items>
                                     <navigationItem title="주문서" id="FcO-nf-NCo">
-                                        <barButtonItem key="leftBarButtonItem" image="chevron.left" catalog="system" id="OAV-PB-i6L"/>
+                                        <barButtonItem key="leftBarButtonItem" image="chevron.left" catalog="system" id="OAV-PB-i6L">
+                                            <connections>
+                                                <action selector="close:" destination="Cc7-1F-kqw" id="46b-3Y-YwY"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -1701,7 +1705,7 @@
                                                     <constraint firstItem="Id1-Yu-wHv" firstAttribute="leading" secondItem="Mpx-EC-HeM" secondAttribute="trailing" constant="20" id="yaG-Cb-lzB"/>
                                                 </constraints>
                                             </view>
-                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="grouped" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="30" estimatedSectionHeaderHeight="-1" sectionFooterHeight="5" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="IH0-In-w8I">
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="grouped" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="30" estimatedSectionHeaderHeight="-1" sectionFooterHeight="5" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="IH0-In-w8I">
                                                 <rect key="frame" x="0.0" y="205" width="414" height="500"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
@@ -2689,15 +2693,23 @@
         <!--Order List View Controller-->
         <scene sceneID="y1U-Jn-QIS">
             <objects>
-                <viewController storyboardIdentifier="orderListViewController" id="0b0-wa-tlB" customClass="orderListViewController" customModule="MarketCurlyB" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="orderListViewController" modalPresentationStyle="fullScreen" id="0b0-wa-tlB" customClass="orderListViewController" customModule="MarketCurlyB" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9UD-S3-fEn">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CaG-xF-9qj">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <color key="tintColor" systemColor="labelColor"/>
                                 <items>
-                                    <navigationItem title="주문 내역" id="nhh-VI-t5M"/>
+                                    <navigationItem title="주문 내역" id="nhh-VI-t5M">
+                                        <barButtonItem key="leftBarButtonItem" id="YA5-VG-Nt3">
+                                            <imageReference key="image" image="arrow.left" catalog="system" symbolScale="medium"/>
+                                            <connections>
+                                                <action selector="close:" destination="0b0-wa-tlB" id="t4p-qq-Tpl"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
                                 </items>
                             </navigationBar>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lae-Sv-CFp">
@@ -2727,6 +2739,90 @@
             </objects>
             <point key="canvasLocation" x="5808.6956521739139" y="-187.5"/>
         </scene>
+        <!--First Order List View Controller-->
+        <scene sceneID="MHX-oh-mPD">
+            <objects>
+                <viewController storyboardIdentifier="firstOrderListViewController" id="VWh-6T-PPS" customClass="firstOrderListViewController" customModule="MarketCurlyB" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="W5y-yh-8Q1">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Prb-v7-Xpf">
+                                <rect key="frame" x="0.0" y="136" width="414" height="726"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="xyL-FD-vFM">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="726"/>
+                                        <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemFillColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="xyL-FD-vFM" secondAttribute="trailing" id="AVV-O9-uWt"/>
+                                    <constraint firstItem="xyL-FD-vFM" firstAttribute="top" secondItem="Prb-v7-Xpf" secondAttribute="top" id="dta-Sg-tKq"/>
+                                    <constraint firstAttribute="bottom" secondItem="xyL-FD-vFM" secondAttribute="bottom" id="h1N-bs-4WB"/>
+                                    <constraint firstItem="xyL-FD-vFM" firstAttribute="leading" secondItem="Prb-v7-Xpf" secondAttribute="leading" id="wUE-uS-Pqj"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="8cl-8O-Ng1"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Prb-v7-Xpf" firstAttribute="top" secondItem="8cl-8O-Ng1" secondAttribute="top" constant="92" id="CfA-hy-rTa"/>
+                            <constraint firstItem="8cl-8O-Ng1" firstAttribute="bottom" secondItem="Prb-v7-Xpf" secondAttribute="bottom" id="Gks-cP-6cl"/>
+                            <constraint firstItem="Prb-v7-Xpf" firstAttribute="leading" secondItem="8cl-8O-Ng1" secondAttribute="leading" id="JM0-ib-jhS"/>
+                            <constraint firstItem="8cl-8O-Ng1" firstAttribute="trailing" secondItem="Prb-v7-Xpf" secondAttribute="trailing" id="Lao-iA-Hr5"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="xyL-FD-vFM" id="U4h-eJ-sK2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dD2-kT-dz6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6518" y="-172"/>
+        </scene>
+        <!--Second Order List View Controller-->
+        <scene sceneID="clT-f2-gP4">
+            <objects>
+                <viewController storyboardIdentifier="secondOrderListViewController" id="3Bw-xD-iBY" customClass="secondOrderListViewController" customModule="MarketCurlyB" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YBF-ZA-IE2">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QNc-vD-E6J">
+                                <rect key="frame" x="0.0" y="136" width="414" height="726"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="FAQ-Re-zmv">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="726"/>
+                                        <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemGray2Color"/>
+                                <constraints>
+                                    <constraint firstItem="FAQ-Re-zmv" firstAttribute="top" secondItem="QNc-vD-E6J" secondAttribute="top" id="FbR-eh-DaC"/>
+                                    <constraint firstAttribute="bottom" secondItem="FAQ-Re-zmv" secondAttribute="bottom" id="FjT-7T-V8w"/>
+                                    <constraint firstAttribute="trailing" secondItem="FAQ-Re-zmv" secondAttribute="trailing" id="IJh-vo-BWL"/>
+                                    <constraint firstItem="FAQ-Re-zmv" firstAttribute="leading" secondItem="QNc-vD-E6J" secondAttribute="leading" id="xJC-Ic-Caj"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="tur-yy-wCb"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="QNc-vD-E6J" firstAttribute="leading" secondItem="tur-yy-wCb" secondAttribute="leading" id="JSl-KG-mN3"/>
+                            <constraint firstItem="tur-yy-wCb" firstAttribute="trailing" secondItem="QNc-vD-E6J" secondAttribute="trailing" id="hmU-bS-r80"/>
+                            <constraint firstItem="QNc-vD-E6J" firstAttribute="top" secondItem="tur-yy-wCb" secondAttribute="top" constant="92" id="jJP-3c-ruo"/>
+                            <constraint firstItem="tur-yy-wCb" firstAttribute="bottom" secondItem="QNc-vD-E6J" secondAttribute="bottom" id="p5N-S5-vgD"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="FAQ-Re-zmv" id="DIZ-bP-ZWd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QN5-tn-9TS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="7184" y="-162"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="k9u-DD-fzw">
             <objects>
@@ -2753,6 +2849,7 @@
     </scenes>
     <resources>
         <image name="aaa" width="20" height="22"/>
+        <image name="arrow.left" catalog="system" width="128" height="98"/>
         <image name="asd" width="124" height="128"/>
         <image name="cart" catalog="system" width="128" height="102"/>
         <image name="checkmark" catalog="system" width="128" height="114"/>
@@ -2785,6 +2882,12 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemFillColor">
+            <color red="0.47058823529411764" green="0.47058823529411764" blue="0.50196078431372548" alpha="0.20000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray4Color">
             <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
